--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
                 <a href="#home" class="flex items-center space-x-3">
-                    <img src="assets/pics/thumbnail.jpg" alt="Ordo Orphika Logo" class="h-10 w-10 rounded-full">
+                    <img src="assets/pics/OrdoOrphica_Logo_HD_no_background.jpg" alt="Ordo Orphika Logo" class="h-10 w-10 rounded-full">
                 </a>
                 <div class="hidden md:flex space-x-6 items-center">
                     <!-- Temporarily commented out old Music link -->
@@ -185,7 +185,7 @@
         <div class="absolute top-0 right-0 w-3/4 max-w-xs h-full bg-primary/95 p-6 shadow-2xl">
             <div class="flex items-center justify-between mb-8">
                 <div class="flex items-center space-x-3">
-                    <img src="assets/pics/thumbnail.jpg" alt="Logo" class="h-10 w-10 rounded-full">
+                    <img src="assets/pics/OrdoOrphica_Logo_HD_no_background.jpg" alt="Logo" class="h-10 w-10 rounded-full">
                 </div>
                 <button id="mobile-menu-close" class="text-gold text-2xl focus:outline-none" aria-label="Close menu">
                     <i class="fas fa-times"></i>
@@ -361,7 +361,7 @@
         <div class="container mx-auto px-6">
             <div class="text-center">
                 <div class="mb-8 flex items-center justify-center space-x-3">
-                    <img src="assets/pics/thumbnail.jpg" alt="Ordo Orphika Logo" class="h-12 w-12 rounded-full">
+                    <img src="assets/pics/OrdoOrphica_Logo_HD_no_background.jpg" alt="Ordo Orphika Logo" class="h-12 w-12 rounded-full">
                 </div>
                 <div class="flex justify-center space-x-8 mb-8">
                     <!-- Old generic Music link intentionally commented out to replace with explicit social links -->
