--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Ordo Orphika - Official Electronic Press Kit">
     <meta property="og:description" content="Official EPK for Ordo Orphika - Seattle-based rock band. Bio, music, videos, tour dates, and press materials.">
-    <meta property="og:image" content="assets/pics/OrdoOrphica_Logo_HD_no_background.jpg">
+    <meta property="og:image" content="assets/pics/OrdoOrphica_Logo_HD_no_background.png">
     <meta property="og:url" content="https://ordoorphika.github.io">
     <meta property="og:site_name" content="Ordo Orphika">
     
@@ -20,7 +20,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Ordo Orphika - Official Electronic Press Kit">
     <meta name="twitter:description" content="Official EPK for Ordo Orphika - Seattle-based rock band. Bio, music, videos, tour dates, and press materials.">
-    <meta name="twitter:image" content="assets/pics/OrdoOrphica_Logo_HD_no_background.jpg">
+    <meta name="twitter:image" content="assets/pics/OrdoOrphica_Logo_HD_no_background.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;600&family=Oswald:wght@400;500;600;700&family=Anton:wght@400&display=swap" rel="stylesheet">
@@ -151,7 +151,7 @@
         <div class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
                 <a href="#home" class="flex items-center space-x-3">
-                    <img src="assets/pics/OrdoOrphica_Logo_HD_no_background.jpg" alt="Ordo Orphika Logo" class="h-10 w-10 rounded-full">
+                    <img src="assets/pics/OrdoOrphica_Logo_HD_no_background.png" alt="Ordo Orphika Logo" class="h-10 w-10 rounded-full">
                 </a>
                 <div class="hidden md:flex space-x-6 items-center">
                     <!-- Temporarily commented out old Music link -->
@@ -185,7 +185,7 @@
         <div class="absolute top-0 right-0 w-3/4 max-w-xs h-full bg-primary/95 p-6 shadow-2xl">
             <div class="flex items-center justify-between mb-8">
                 <div class="flex items-center space-x-3">
-                    <img src="assets/pics/OrdoOrphica_Logo_HD_no_background.jpg" alt="Logo" class="h-10 w-10 rounded-full">
+                    <img src="assets/pics/OrdoOrphica_Logo_HD_no_background.png" alt="Logo" class="h-10 w-10 rounded-full">
                 </div>
                 <button id="mobile-menu-close" class="text-gold text-2xl focus:outline-none" aria-label="Close menu">
                     <i class="fas fa-times"></i>
@@ -361,7 +361,7 @@
         <div class="container mx-auto px-6">
             <div class="text-center">
                 <div class="mb-8 flex items-center justify-center space-x-3">
-                    <img src="assets/pics/OrdoOrphica_Logo_HD_no_background.jpg" alt="Ordo Orphika Logo" class="h-12 w-12 rounded-full">
+                    <img src="assets/pics/OrdoOrphica_Logo_HD_no_background.png" alt="Ordo Orphika Logo" class="h-12 w-12 rounded-full">
                 </div>
                 <div class="flex justify-center space-x-8 mb-8">
                     <!-- Old generic Music link intentionally commented out to replace with explicit social links -->
