reverting sub text font

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <!-- Floating responsive logo image replacing the text. Scaled down to fit viewport while keeping impact -->
                 <img src="assets/pics/OrdoOrphica_Title_HD_no_background.png" alt="Ordo Orphika logo" class="mx-auto relative -top-6 max-w-[720px] w-[20rem] sm:w-[28rem] md:w-[36rem] lg:w-[44rem] logo-glow" />
             </div>
-            <div class="text-gold text-3xl sm:text-4xl md:text-5xl mb-12 font-display tracking-widest" style="text-shadow: 0 0 20px rgba(212, 175, 55, 0.9), 0 0 40px rgba(212, 175, 55, 0.7), 0 0 60px rgba(212, 175, 55, 0.5);">
+            <div class="text-gold text-3xl sm:text-4xl md:text-5xl mb-12 font-display tracking-widest" style="font-family: 'Cormorant Regular', serif; text-shadow: 0 0 20px rgba(212, 175, 55, 0.9), 0 0 40px rgba(212, 175, 55, 0.7), 0 0 60px rgba(212, 175, 55, 0.5);">
                 Esoteric Funk N' Roll
             </div>
             <div class="flex flex-col sm:flex-row justify-center gap-6 mb-16">
@@ -394,9 +394,6 @@
                 <div class="relative">
                     <div class="neon-border rounded-2xl p-2">
                         <img src="assets/pics/band_pic.jpeg" alt="Ordo Orphika band members performing" class="rounded-2xl w-full h-auto shadow-2xl" loading="lazy">
-                    </div>
-                    <div class="absolute -bottom-4 -right-4 bg-accent text-white p-3 rounded-xl shadow-2xl">
-                        <!--<p class="font-tech text-sm">EST. 2023 | SEATTLE</p>-->
                     </div>
                 </div>
                 <div class="space-y-4">
