add msuic button back to top bar

--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
                     <img src="assets/pics/OrdoOrphica_Logo_HD_no_background.png" alt="Ordo Orphika Logo" class="h-10 w-10 rounded-full">
                 </a>
                 <div class="hidden md:flex space-x-6 items-center">
-                    <!-- Temporarily commented out old Music link -->
-                    <!-- <a href="https://soundcloud.com/ordo-orphika/albums" target="_blank" class="hover:text-neon transition-all duration-300 hover:scale-110">Music</a> -->
+                    <!-- Desktop Music link mirrors mobile menu anchor -->
+                    <a href="#music" class="hover:text-neon transition-all duration-300 hover:scale-110">Music</a>
                     <a href="#videos" class="hover:text-neon transition-all duration-300 hover:scale-110">Videos</a>
                     <a href="#contact" class="hover:text-accent transition-all duration-300 hover:scale-110">Contact</a>
                     <a href="#" onclick="openBioPopup()" class="hover:text-neon transition-all duration-300 hover:scale-110">Bio</a>
