--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <a href="https://soundcloud.com/ordo-orphika/albums" target="_blank" class="text-gold hover:text-accent transition-colors" aria-label="SoundCloud">
                         <i class="fab fa-soundcloud text-xl"></i>
                     </a>
-                    <a href="https://www.youtube.com/results?search_query=Ordo+Orphika" target="_blank" class="text-gold hover:text-accent transition-colors" aria-label="YouTube">
+                    <a href="https://www.youtube.com/@OrdoOrphika" target="_blank" class="text-gold hover:text-accent transition-colors" aria-label="YouTube">
                         <i class="fab fa-youtube text-xl"></i>
                     </a>
                     <button id="mobile-menu-button" class="md:hidden text-gold text-2xl focus:outline-none" aria-expanded="false" aria-controls="mobile-menu">
@@ -367,7 +367,7 @@
                     <!-- Old generic Music link intentionally commented out to replace with explicit social links -->
                     <!-- <a href="https://soundcloud.com/ordo-orphika/albums" target="_blank" class="text-gray-400 hover:text-neon transition-colors">Music</a> -->
                     <a href="https://soundcloud.com/ordo-orphika/albums" target="_blank" class="text-gray-400 hover:text-neon transition-colors">SoundCloud</a>
-                    <a href="https://www.youtube.com/results?search_query=Ordo+Orphika" target="_blank" class="text-gray-400 hover:text-neon transition-colors">YouTube</a>
+                    <a href="https://www.youtube.com/@OrdoOrphika" target="_blank" class="text-gray-400 hover:text-neon transition-colors">YouTube</a>
                     <a href="#contact" class="text-gray-400 hover:text-accent transition-colors">Contact</a>
                     <a href="#" onclick="openBioPopup()" class="text-gray-400 hover:text-neon transition-colors">Bio</a>
                 </div>
