--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <a href="https://soundcloud.com/ordo-orphika/albums" target="_blank" class="text-gold hover:text-accent transition-colors" aria-label="SoundCloud">
                         <i class="fab fa-soundcloud text-xl"></i>
                     </a>
-                    <a href="https://www.youtube.com/@OrdoOrphika" target="_blank" class="text-gold hover:text-accent transition-colors" aria-label="YouTube">
+                    <a href="https://www.youtube.com/@OrdoOrphika/" target="_blank" rel="noopener noreferrer" class="text-gold hover:text-accent transition-colors" aria-label="YouTube">
                         <i class="fab fa-youtube text-xl"></i>
                     </a>
                     <button id="mobile-menu-button" class="md:hidden text-gold text-2xl focus:outline-none" aria-expanded="false" aria-controls="mobile-menu">
@@ -243,7 +243,7 @@
             <h2 class="text-4xl font-display font-bold text-white text-center mb-6">Official Videos</h2>
             <p class="text-center text-gray-300 max-w-2xl mx-auto mb-6">Check out our YouTube channel for more music, live clips, and behind-the-scenes footage.</p>
             <div class="text-center mb-8">
-                <a href="https://www.youtube.com/@OrdoOrphika" target="_blank" class="inline-flex items-center gap-3 bg-gold text-primary px-6 py-3 rounded-full shadow-2xl hover:scale-105 transition-transform font-display">
+                <a href="https://www.youtube.com/@OrdoOrphika/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center gap-3 bg-gold text-primary px-6 py-3 rounded-full shadow-2xl hover:scale-105 transition-transform font-display">
                     <i class="fab fa-youtube"></i>
                     <span class="font-medium">Visit our YouTube Channel</span>
                 </a>
@@ -367,7 +367,7 @@
                     <!-- Old generic Music link intentionally commented out to replace with explicit social links -->
                     <!-- <a href="https://soundcloud.com/ordo-orphika/albums" target="_blank" class="text-gray-400 hover:text-neon transition-colors">Music</a> -->
                     <a href="https://soundcloud.com/ordo-orphika/albums" target="_blank" class="text-gray-400 hover:text-neon transition-colors">SoundCloud</a>
-                    <a href="https://www.youtube.com/@OrdoOrphika" target="_blank" class="text-gray-400 hover:text-neon transition-colors">YouTube</a>
+                    <a href="https://www.youtube.com/@OrdoOrphika/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-neon transition-colors">YouTube</a>
                     <a href="#contact" class="text-gray-400 hover:text-accent transition-colors">Contact</a>
                     <a href="#" onclick="openBioPopup()" class="text-gray-400 hover:text-neon transition-colors">Bio</a>
                 </div>
