feat: add member bio pages and link from main bio popup

--- a/index.html
+++ b/index.html
@@ -424,40 +424,54 @@
                         <h4 class="text-xl font-display text-gold mb-4 text-center">THE ORPHIC COUNCIL</h4>
                         <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
                             <div class="text-center">
-                                <div class="neon-border rounded-xl p-2 mb-3 transform transition-transform hover:scale-105 hover:shadow-2xl">
-                                    <img src="assets/pics/Ian.jpeg" alt="Ian McKagan - Guitar" class="rounded-lg w-full h-32 object-cover shadow-xl">
-
-                                </div>
+                                <a href="members/ian.html" class="block">
+                                    <div class="neon-border rounded-xl p-2 mb-3 transform transition-transform hover:scale-105 hover:shadow-2xl">
+                                        <img src="assets/pics/Ian.jpeg" alt="Ian McKagan - Guitar" class="rounded-lg w-full h-32 object-cover shadow-xl">
+                                    </div>
+                                </a>
                                 <h5 class="text-sm font-display text-gold">Ian McKagan</h5>
                                 <p class="text-neon font-tech text-xs">Guitar</p>
+                                <a href="members/ian.html" class="text-xs text-gray-400 hover:text-neon mt-2 inline-block">Learn more</a>
                             </div>
                             <div class="text-center">
-                                <div class="neon-border rounded-xl p-2 mb-3 transform transition-transform hover:scale-105 hover:shadow-2xl">
-                                    <img src="assets/pics/Woody.jpeg" alt="Woody Frank - Bass" class="rounded-lg w-full h-32 object-cover shadow-xl">
-                                </div>
+                                <a href="members/woody.html" class="block">
+                                    <div class="neon-border rounded-xl p-2 mb-3 transform transition-transform hover:scale-105 hover:shadow-2xl">
+                                        <img src="assets/pics/Woody.jpeg" alt="Woody Frank - Bass" class="rounded-lg w-full h-32 object-cover shadow-xl">
+                                    </div>
+                                </a>
                                 <h5 class="text-sm font-display text-gold">Woody Frank</h5>
                                 <p class="text-neon font-tech text-xs">Bass</p>
+                                <a href="members/woody.html" class="text-xs text-gray-400 hover:text-neon mt-2 inline-block">Learn more</a>
                             </div>
                             <div class="text-center">
-                                <div class="neon-border rounded-xl p-2 mb-3 transform transition-transform hover:scale-105 hover:shadow-2xl">
-                                    <img src="assets/pics/Jon.jpeg" alt="Jon Plaut - Keys" class="rounded-lg w-full h-32 object-cover shadow-xl">
-                                </div>
+                                <a href="members/jon.html" class="block">
+                                    <div class="neon-border rounded-xl p-2 mb-3 transform transition-transform hover:scale-105 hover:shadow-2xl">
+                                        <img src="assets/pics/Jon.jpeg" alt="Jon Plaut - Keys" class="rounded-lg w-full h-32 object-cover shadow-xl">
+                                    </div>
+                                </a>
                                 <h5 class="text-sm font-display text-gold">Jon Plaut</h5>
                                 <p class="text-neon font-tech text-xs">Keys</p>
+                                <a href="members/jon.html" class="text-xs text-gray-400 hover:text-neon mt-2 inline-block">Learn more</a>
                             </div>
                             <div class="text-center">
-                                <div class="neon-border rounded-xl p-2 mb-3 transform transition-transform hover:scale-105 hover:shadow-2xl">
-                                    <img src="assets/pics/Mathew.jpeg" alt="Mathew Wooten - Saxophone" class="rounded-lg w-full h-32 object-cover shadow-xl">
-                                </div>
+                                <a href="members/mathew.html" class="block">
+                                    <div class="neon-border rounded-xl p-2 mb-3 transform transition-transform hover:scale-105 hover:shadow-2xl">
+                                        <img src="assets/pics/Mathew.jpeg" alt="Mathew Wooten - Saxophone" class="rounded-lg w-full h-32 object-cover shadow-xl">
+                                    </div>
+                                </a>
                                 <h5 class="text-sm font-display text-gold">Mathew Wooten</h5>
                                 <p class="text-neon font-tech text-xs">Saxophone</p>
+                                <a href="members/mathew.html" class="text-xs text-gray-400 hover:text-neon mt-2 inline-block">Learn more</a>
                             </div>
                             <div class="text-center">
-                                <div class="neon-border rounded-xl p-2 mb-3 transform transition-transform hover:scale-105 hover:shadow-2xl">
-                                    <img src="assets/pics/Robby.jpeg" alt="Robby DeRosa - Drums" class="rounded-lg w-full h-32 object-cover shadow-xl">
-                                </div>
+                                <a href="members/robby.html" class="block">
+                                    <div class="neon-border rounded-xl p-2 mb-3 transform transition-transform hover:scale-105 hover:shadow-2xl">
+                                        <img src="assets/pics/Robby.jpeg" alt="Robby DeRosa - Drums" class="rounded-lg w-full h-32 object-cover shadow-xl">
+                                    </div>
+                                </a>
                                 <h5 class="text-sm font-display text-gold">Robby DeRosa</h5>
                                 <p class="text-neon font-tech text-xs">Drums</p>
+                                <a href="members/robby.html" class="text-xs text-gray-400 hover:text-neon mt-2 inline-block">Learn more</a>
                             </div>
                         </div>
                     </div>
