--- a/videos.html
+++ b/videos.html
@@ -14,8 +14,8 @@
                 <img src="assets/pics/thumbnail.jpg" alt="Ordo Orphika" class="h-10 w-10 rounded-full">
             </a>
             <div class="hidden md:flex space-x-6 items-center">
-                <a href="index.html#home" class="hover:text-neon transition-all duration-300">Home</a>
-                <a href="index.html#music" class="hover:text-neon transition-all duration-300">Music</a>
+                <a href="index.html#home" class="hover:text-deepPurple transition-all duration-300">Home</a>
+                <a href="index.html#music" class="hover:text-deepPurple transition-all duration-300">Music</a>
                 <a href="videos.html" class="text-gold font-semibold">Videos</a>
                 <a href="index.html#contact" class="hover:text-accent transition-all duration-300">Contact</a>
             </div>
