style: swap deep-purple accents to gold/brass; restyle contact labels; update videos page visuals

--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
                 </a>
                 <div class="hidden md:flex space-x-6 items-center">
                     <!-- Desktop Music link mirrors mobile menu anchor -->
-                    <a href="#music" class="hover:text-deepPurple transition-all duration-300 hover:scale-110">Music</a>
-                    <a href="#videos" class="hover:text-deepPurple transition-all duration-300 hover:scale-110">Videos</a>
+                    <a href="#music" class="hover:text-gold transition-all duration-300 hover:scale-110">Music</a>
+                    <a href="#videos" class="hover:text-gold transition-all duration-300 hover:scale-110">Videos</a>
                     <a href="#contact" class="hover:text-accent transition-all duration-300 hover:scale-110">Contact</a>
-                    <a href="#" onclick="openBioPopup()" class="hover:text-deepPurple transition-all duration-300 hover:scale-110">Bio</a>
+                    <a href="#" onclick="openBioPopup()" class="hover:text-gold transition-all duration-300 hover:scale-110">Bio</a>
                     <!-- <a href="#tour" class="bg-gold text-primary px-4 py-2 rounded-full hover:scale-105 transition-all duration-200 font-tech">TOUR</a> -->
                 </div>
                 <div class="flex space-x-4 items-center">
@@ -194,11 +194,11 @@
             </div>
             <nav class="flex flex-col space-y-4" aria-label="Mobile navigation">
                 <a href="#bio" onclick="openBioPopup()" class="text-white hover:text-accent text-lg">Bio</a>
-                <a href="#videos" class="text-white hover:text-deepPurple text-lg">Videos</a>
-                <a href="#music" class="text-white hover:text-deepPurple text-lg">Music</a>
+                <a href="#videos" class="text-white hover:text-gold text-lg">Videos</a>
+                <a href="#music" class="text-white hover:text-gold text-lg">Music</a>
                 <a href="#tour" class="bg-gold text-primary px-4 py-2 rounded-full w-max">TOUR</a>
                 <a href="#press" class="text-white hover:text-accent text-lg">Press</a>
-                <a href="#contact" class="text-white hover:text-deepPurple text-lg">Contact</a>
+                <a href="#contact" class="text-white hover:text-gold text-lg">Contact</a>
             </nav>
         </div>
     </div>
@@ -289,8 +289,8 @@
                                         <i class="fas fa-envelope text-primary"></i>
                                     </div>
                                     <div class="min-w-0">
-                                        <p class="text-deepPurple font-tech">EMAIL</p>
-                                        <a href="mailto:ordoorphika@gmail.com" class="text-white hover:text-accent transition-colors truncate">ordoorphika@gmail.com</a>
+                                        <p class="inline-block bg-deepPurple text-gold px-2 py-1 rounded font-tech">EMAIL</p>
+                                        <a href="mailto:ordoorphika@gmail.com" class="ml-3 text-white hover:text-accent transition-colors truncate">ordoorphika@gmail.com</a>
                                     </div>
                                 </div>
                                 <div class="flex items-start">
@@ -298,8 +298,8 @@
                                         <i class="fas fa-map-marker-alt text-primary"></i>
                                     </div>
                                     <div class="min-w-0">
-                                        <p class="text-deepPurple font-tech">LOCATION</p>
-                                        <p class="text-white">Seattle, WA</p>
+                                        <p class="inline-block bg-deepPurple text-gold px-2 py-1 rounded font-tech">LOCATION</p>
+                                        <p class="ml-3 text-white">Seattle, WA</p>
                                     </div>
                                 </div>
                             </div>
@@ -367,10 +367,10 @@
                 <div class="flex justify-center space-x-8 mb-8">
                     <!-- Old generic Music link intentionally commented out to replace with explicit social links -->
                     <!-- <a href="https://soundcloud.com/ordo-orphika/albums" target="_blank" class="text-gray-400 hover:text-deepPurple transition-colors">Music</a> -->
-                    <a href="https://soundcloud.com/ordo-orphika/albums" target="_blank" class="text-gray-400 hover:text-deepPurple transition-colors">SoundCloud</a>
-                    <a href="https://www.youtube.com/@OrdoOrphika/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-deepPurple transition-colors">YouTube</a>
+                    <a href="https://soundcloud.com/ordo-orphika/albums" target="_blank" class="text-gray-400 hover:text-gold transition-colors">SoundCloud</a>
+                    <a href="https://www.youtube.com/@OrdoOrphika/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-gold transition-colors">YouTube</a>
                     <a href="#contact" class="text-gray-400 hover:text-accent transition-colors">Contact</a>
-                    <a href="#" onclick="openBioPopup()" class="text-gray-400 hover:text-deepPurple transition-colors">Bio</a>
+                    <a href="#" onclick="openBioPopup()" class="text-gray-400 hover:text-gold transition-colors">Bio</a>
                 </div>
                 <div class="text-gray-500 text-sm">
                     <p>© 2025 Ordo Orphika. All rights reserved.</p>
@@ -411,7 +411,7 @@
                         <span class="text-gold">Ordo Orphika</span> is a 5 piece band from Seattle, their influences span a number of genres ranging from rock, <span class="text-gold font-semibold">blues</span>, <span class="text-gold font-semibold">funk</span>, jazz, lo fi, dance music, and <span class="text-gold font-semibold">psychedelia</span>. It features Seattle music veterans <span class="text-accent">Ian McKagan</span> (Kings of Cavalier, Morning Glory Revival) on guitar and <span class="text-accent">Woody Frank</span> (Whitney Monge, Map of the Woulds) on bass, as well as Saxophonist (Dr.) <span class="text-accent">Mathew Wooten</span>, Keys player <span class="text-accent">Jon Plaut</span>, and the handsome and mysterious drummer <span class="text-accent">Robby DeRosa</span> from the exotic far eastern land of New Jersey!
                     </p>
                     <p class="text-base leading-relaxed">
-                        <span class="text-deepPurple font-semibold">What will you hear?</span>
+                        <span class="text-gold font-semibold">What will you hear?</span>
                     </p>
                     <p class="text-base leading-relaxed">
                         Rich harmonies, interweaving and genre bending soloist, lyrics rich with meaning, symbolism and mythology, both old and new. Diverse songs that aspire to take you on a journey to a higher place within yourself, or maybe just to find the lowest common denominator.
@@ -431,8 +431,8 @@
                                     </div>
                                 </a>
                                 <h5 class="text-sm font-display text-gold">Ian McKagan</h5>
-                                <p class="text-deepPurple font-tech text-xs">Guitar</p>
-                                <a href="members/ian.html" class="text-xs text-gray-400 hover:text-deepPurple mt-2 inline-block">Learn more</a>
+                                <p class="text-gold font-tech text-xs">Guitar</p>
+                                <a href="members/ian.html" class="text-xs text-gray-400 hover:text-gold mt-2 inline-block">Learn more</a>
                             </div>
                             <div class="text-center">
                                 <a href="members/woody.html" class="block">
@@ -441,8 +441,8 @@
                                     </div>
                                 </a>
                                 <h5 class="text-sm font-display text-gold">Woody Frank</h5>
-                                <p class="text-deepPurple font-tech text-xs">Bass</p>
-                                <a href="members/woody.html" class="text-xs text-gray-400 hover:text-deepPurple mt-2 inline-block">Learn more</a>
+                                <p class="text-gold font-tech text-xs">Bass</p>
+                                <a href="members/woody.html" class="text-xs text-gray-400 hover:text-gold mt-2 inline-block">Learn more</a>
                             </div>
                             <div class="text-center">
                                 <a href="members/jon.html" class="block">
@@ -451,8 +451,8 @@
                                     </div>
                                 </a>
                                 <h5 class="text-sm font-display text-gold">Jon Plaut</h5>
-                                <p class="text-deepPurple font-tech text-xs">Keys</p>
-                                <a href="members/jon.html" class="text-xs text-gray-400 hover:text-deepPurple mt-2 inline-block">Learn more</a>
+                                <p class="text-gold font-tech text-xs">Keys</p>
+                                <a href="members/jon.html" class="text-xs text-gray-400 hover:text-gold mt-2 inline-block">Learn more</a>
                             </div>
                             <div class="text-center">
                                 <a href="members/mathew.html" class="block">
@@ -461,8 +461,8 @@
                                     </div>
                                 </a>
                                 <h5 class="text-sm font-display text-gold">Mathew Wooten</h5>
-                                <p class="text-deepPurple font-tech text-xs">Saxophone</p>
-                                <a href="members/mathew.html" class="text-xs text-gray-400 hover:text-deepPurple mt-2 inline-block">Learn more</a>
+                                <p class="text-gold font-tech text-xs">Saxophone</p>
+                                <a href="members/mathew.html" class="text-xs text-gray-400 hover:text-gold mt-2 inline-block">Learn more</a>
                             </div>
                             <div class="text-center">
                                 <a href="members/robby.html" class="block">
@@ -471,8 +471,8 @@
                                     </div>
                                 </a>
                                 <h5 class="text-sm font-display text-gold">Robby DeRosa</h5>
-                                <p class="text-deepPurple font-tech text-xs">Drums</p>
-                                <a href="members/robby.html" class="text-xs text-gray-400 hover:text-deepPurple mt-2 inline-block">Learn more</a>
+                                <p class="text-gold font-tech text-xs">Drums</p>
+                                <a href="members/robby.html" class="text-xs text-gray-400 hover:text-gold mt-2 inline-block">Learn more</a>
                             </div>
                         </div>
                     </div>
@@ -553,7 +553,7 @@
             // Show loading state
             submitButton.textContent = 'SENDING...';
             submitButton.disabled = true;
-            statusDiv.className = 'mt-4 text-center text-deepPurple';
+            statusDiv.className = 'mt-4 text-center text-gold';
             statusDiv.textContent = 'Sending your message through esoteric channels...';
             statusDiv.classList.remove('hidden');
             
