--- a/videos.html
+++ b/videos.html
@@ -42,7 +42,7 @@
                 <div class="neon-border rounded-2xl p-4 bg-dark/60">
                     <div class="relative" style="padding-top:56.25%;">
                         <!-- Embed When You Get Down -->
-                        <iframe loading="lazy" class="absolute inset-0 w-full h-full rounded-lg" src="https://www.youtube.com/embed/wEdK52XsZPI" title="When You Get Down - Ordo Orphika" frameborder="0" allowfullscreen></iframe>
+                        <iframe loading="lazy" class="absolute inset-0 w-full h-full rounded-lg" src="https://www.youtube.com/embed/iCCGGqersgg" title="When You Get Down - Ordo Orphika" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <h3 class="mt-4 text-xl font-display text-gold">When You Get Down</h3>
                     <p class="text-sm text-gray-300 mt-1">Live in the Studio</p>
@@ -50,7 +50,7 @@
                 <div class="neon-border rounded-2xl p-4 bg-dark/60">
                     <div class="relative" style="padding-top:56.25%;">
                         <!-- Embed Thor's Daze Blues -->
-                        <iframe loading="lazy" class="absolute inset-0 w-full h-full rounded-lg" src="https://www.youtube.com/embed/LUZy7ypJ6vE" title="Thor's Daze Blues - Ordo Orphika" frameborder="0" allowfullscreen></iframe>
+                        <iframe loading="lazy" class="absolute inset-0 w-full h-full rounded-lg" src="https://www.youtube.com/embed/jKHvcROkkqc" title="Thor's Daze Blues - Ordo Orphika" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <h3 class="mt-4 text-xl font-display text-gold">Thor's Daze Blues</h3>
                     <p class="text-sm text-gray-300 mt-1">Live in the Studio</p>
