--- a/index.html
+++ b/index.html
@@ -253,14 +253,14 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div class="neon-border rounded-2xl p-4 bg-dark/60">
                     <div class="relative" style="padding-top:56.25%;">
-                        <iframe id="player-thor" loading="lazy" class="absolute inset-0 w-full h-full rounded-lg" src="https://www.youtube.com/embed/jKHvcROkkqc?enablejsapi=1&origin=" frameborder="0" title="Thor's Daze Blues - Ordo Orphika" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe id="player-thor" loading="lazy" class="absolute inset-0 w-full h-full rounded-lg src="https://www.youtube.com/embed/iCCGGqersgg?enablejsapi=1&origin=" frameborder="0" title="Thor's Daze Blues - Ordo Orphika" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <h3 class="mt-4 text-xl font-display text-gold">Thor's Daze Blues</h3>
                     <p class="text-sm text-gray-300 mt-1">Live in the Studio</p>
                 </div>
                 <div class="neon-border rounded-2xl p-4 bg-dark/60">
                     <div class="relative" style="padding-top:56.25%;">
-                        <iframe id="player-when" loading="lazy" class="absolute inset-0 w-full h-full rounded-lg" src="https://www.youtube.com/embed/iCCGGqersgg?enablejsapi=1&origin=" frameborder="0" title="When You Get Down - Ordo Orphika" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe id="player-when" loading="lazy" class="absolute inset-0 w-full h-full rounded-lg" src="https://www.youtube.com/embed/jKHvcROkkqc?enablejsapi=1&origin=" frameborder="0" title="When You Get Down - Ordo Orphika" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <h3 class="mt-4 text-xl font-display text-gold">When You Get Down</h3>
                     <p class="text-sm text-gray-300 mt-1">Live in the Studio</p>
