--- a/members/woody.html
+++ b/members/woody.html
@@ -4,10 +4,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Woody Frank — Ordo Orphika</title>
+  <style>
+    .cta-secondary{display:inline-flex;align-items:center;gap:.5rem;background:transparent;color:#d4af37;padding:.5rem .9rem;border-radius:.6rem;border:1px solid rgba(212,175,55,0.18);font-weight:600;text-decoration:none}
+    .cta-secondary:hover{transform:translateY(-2px) scale(1.01);filter:brightness(1.05)}
+  </style>
 </head>
 <body>
   <main class="container mx-auto px-6 py-12">
-    <a href="/index.html" class="text-sm mb-6 inline-block">← Back</a>
+    <a href="/index.html" class="cta-secondary mb-6 inline-block">← Back</a>
     <h1>Woody Frank — Bass</h1>
     <img src="/assets/pics/Woody.jpeg" alt="Woody Frank" style="max-width:300px;width:100%;border-radius:8px;">
     <p>Woody Frank brings deep grooves and low-end power. (Placeholder bio — fill in details.)</p>
